--- a/Src/appsettings.Development.json
+++ b/Src/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MariaDbConnectionString": "Server=localhost;Port=3306;User id=Dev;Password=Develop;Database=Fiction"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
