--- a/Src/appsettings.Development.json
+++ b/Src/appsettings.Development.json
@@ -3,6 +3,11 @@
   "ConnectionStrings": {
     "MariaDbConnectionString": "Server=localhost;Port=3306;User id=Dev;Password=Develop;Database=Fiction"
   },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:61955",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
